# complexity-profiler

./: .editorconfig  .gitignore  .pre-commit-config.yaml  EXPORT_GUIDE.md  EXPORT_IMPLEMENTATION_SUMMARY.md  EXPORT_INDEX.md  EXPORT_QUICK_REFERENCE.md  EXPORT_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE4_IMPLEMENTATION.md  README.md  complexity-profiler.py  config.toml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_phase1.py  test_phase4.py  test_sorting_quick.py  verify_phase4_imports.py
.github/workflows/: ci.yml
complexity_profiler/: __init__.py  __main__.py
complexity_profiler/algorithms/: __init__.py  base.py  graph.py  searching.py  sorting_new.py
complexity_profiler/analysis/: __init__.py  curve_fitting.py  metrics.py  profiler.py  statistics.py
complexity_profiler/cli/: main.py  validators.py
complexity_profiler/cli/commands/: analyze.py
complexity_profiler/config/: defaults.py  settings.py
complexity_profiler/data/: __init__.py  generators.py  graph_generators.py
complexity_profiler/export/: __init__.py  csv_exporter.py  json_exporter.py
complexity_profiler/utils/: exceptions.py  logging_config.py
complexity_profiler/visualization/: __init__.py  charts.py  formatters.py  themes.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  algorithms.md
docs/examples/: basic_usage.md
examples/: export_example.py  test_export_functionality.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_profiler.py
tests/unit/: test_algorithms.py  test_metrics.py  test_sorting.py  test_statistics.py
